# GalaxeaVLA

./: .gitignore  CLAUDE.md  DEPLOYMENT_README.md  FILES_SUMMARY.txt  INFERENCE_GUIDE.md  LICENSE  NOTICE  QUICKSTART.md  README.md  SERVER_SETUP.md  finetune.py  finetune.sh  glx_vla.yml  inference_demo.py  pyproject.toml  sync_to_server.sh
configs/: train.yaml
configs/data/libero/: default.yaml
configs/data/r1lite/: arm.yaml  arm_torso_velocity_chassis.yaml
configs/data/r1pro/: eef.yaml  eef_torso.yaml
configs/inference/: last0_galaxea.yaml  r1lite_g0plus_pytorch.yaml
configs/model/vla/: g0plus.yaml  g0plus_mixture.yaml  smolvla.yaml
configs/task/real/: mixture_g0plus.yaml  r1lite_g0plus_finetune.yaml  r1lite_g0plus_finetune_demo.yaml  r1pro_smolvla_finetune.yaml
configs/task/sim/: libero_fdp.yaml  libero_tiny_vla.yaml
docker/: Dockerfile.dev
experiments/: policy_r1_lite.py
experiments/robot/galaxea_real/: galaxea_real_utils.py  instruction.txt  replay.py  robot_interface.py  run.py  wrapper.py
paligemma/: configuration_paligemma.py  modeling_paligemma.py  processing_paligemma.py
prismatic/conf/: vla.py
prismatic/models/: load.py
prismatic/models/vlms/: base_vlm.py
prismatic/training/: materialize.py
prismatic/training/strategies/: base_strategy.py  ddp.py  fsdp.py
prismatic/util/: data_utils.py  torch_utils.py
prismatic/vla/: __init__.py  materialize.py
prismatic/vla/datasets/: __init__.py  datasets.py
scripts/: download_paligemma.sh  eval_libero.py  eval_open_loop.py  finetune.py  last0_prepare_observation.py  last0_robot_bridge.py  last0_server_inference.py  pull_latest.sh  push.sh  server_inference.py  setup_galaxea_python_env.sh  setup_ros2_humble_ubuntu2204.sh  setup_server.sh  test_ros2_observation.py
scripts/run/: eval_open_loop.sh  run_last0_galaxea_0327_150517.sh  run_last0_offline_replay_0327_160001.sh  run_ros2_observation_check_0327_152239.sh
src/galaxea_fm/data/: base_lerobot_dataset.py  galaxea_lerobot_dataset.py
src/galaxea_fm/inference/: __init__.py  config.py  runtime.py  schemas.py
src/galaxea_fm/last0/: __init__.py  action_adapter.py  config.py  observation_adapter.py  (+2 more)
vla/: galaxea_zero.py  helper.py  load.py  monitor.py  vla_base.py
(+54 files in other folders)
